fix: fixed style scaling issue
fixed issue where style where certain components style would not align on diffrent devices

--- a/images/frontend/angular-portfolio-website/src/app/app.component.scss
+++ b/images/frontend/angular-portfolio-website/src/app/app.component.scss
@@ -3,6 +3,7 @@
 
 .application-container{
     display: flex;
+    align-items: center;
     flex-direction: column;
     background: $primary-yellow;
     background-image: url("../assets/images/backgroundDots.png");
@@ -17,7 +18,7 @@
     margin: 7vh 0 0;
     padding-top: 2vh;
     height: 70vh;
-    width: calc(90vw - 5rem);
+    width: calc(95vw - 5rem);
     border-left: 3px solid;
     border-right: 3px solid;
     align-items: center;
