--- a/images/frontend/angular-portfolio-website/src/app/core/shared/components/header/header.component.scss
+++ b/images/frontend/angular-portfolio-website/src/app/core/shared/components/header/header.component.scss
@@ -4,7 +4,8 @@
 
 .header{
     position: absolute;
-    width: calc(90vw - 4.6rem);
+    left: 4.6rem;
+    right: 4.6rem;
     display: flex;
     justify-content: center;
     align-items: center;
